syntax = "proto2";
import "color.proto";

message ServerInfo_Counter {
    optional sint32 id = 1;
    optional string name = 2;
    optional color counter_color = 3;
    optional sint32 radius = 4;
    optional sint32 count = 5;
}
